# nohedidnt_py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: branch.yaml  release.yaml
docs/: conf.py  index.rst
nohedidnt_py/: __init__.py  aliases.py  catalogues.py  configs.py  constants.py  enums.py  helpers.py
nohedidnt_py/aliases/: __init__.py  catalogues.py  imports.py
nohedidnt_py/constants/: __init__.py  _dynamic.py  dynamic.py
tests/: __init__.py  conftest.py  context.py  test_helpers.py  test_main.py
